Alon Braitstein 

21-02-2013
----------------
1. Bug fix, add 2 missing parameters to function to prevent warnnings.
 