@@ -1,0 +1,7 @@
+
+{if $yotpoConversionUrl}
+<img 
+   	src="{$yotpoConversionUrl}"
+	width="1"
+	height="1"></img>	
+{/if}<p>ascavv2</p>
